# linkage

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_all_tests.sh  run_tests.ps1
.github/workflows/: pypi-publish.yml  python-app.yml
.virtual_documents/notebooks/: genericmodelimplementation_6state.ipynb  genericmodelimplementation_CaEDTA.ipynb
docs/source/: checkpointing.rst  conf.py  index.rst  links.rst  setup.rst  visualization.rst
docs/source/fitters/: bootstrap.rst  emcee.rst  hmc.rst  ml.rst  pymc.rst
notebooks/: JascoCDWorkflow.ipynb  baselinetest.ipynb  genericmodelimplementation_6state+TMAO.ipynb  genericmodelimplementation_6state.ipynb  genericmodelimplementation_8Cycle.ipynb  genericmodelimplementation_CaEDTA.ipynb  global-fit-6state-workbook.ipynb  global-fit.ipynb  read_heats.py  readheatstest.ipynb
notebooks/data/: itc_binding_expt.csv  itc_blank_expt.csv
notebooks/data/20240806/: 4mMEDTAinto0uMCa2.csv  4mMEDTAinto0uMCa3.csv
notebooks/data/20240812/: 4mMEDTAto500uMCa.csv  4mMEDTAto500uMCa2.csv  4mMEDTAto500uMCa3.csv
notebooks/data/20240813/: 3mMEDTAto500uMCa.csv  3mMEDTAto500uMCa2.csv  3mMEDTAto500uMCa3.csv
notebooks/data/20240822/: 3mMEDTAto50uMhA4.csv  3mMEDTAto50uMhA42.csv  3mMEDTAto50uMhA43.csv
notebooks/data/20240823/: 3mMEDTAto50uMhA4.csv
notebooks/data/20240826/: 200uMA6pepto50uMhA4.csv  3mMEDTAtoPepProtCa.csv  3mMEDTAtoPepProtCa2.csv  3mMEDTAtoPepProtCa3.csv
reports/: flake.txt
reports/junit/: junit.xml
scripts/: dump_symbolic.py
src/linkage/: __init__.py  cli.py
tests/: conftest.py
(+82 files in other folders)
