[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.dynamic]
version = {attr = "linkage.__version__.__version__"}

[tool.setuptools.package-data]
"*" = [
  "src/linkage/data/*"
]

[project]
name = "linkage"
dynamic = ["version"]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "dataprob"
]

requires-python = ">=3.10"
authors = [
  {name = "Mike Harms", email = "harms@uoregon.edu"},
]
maintainers = [
  {name = "Mike Harms", email = "harms@uoregon.edu"}
]
description = ""
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/harmslab/linkage.git"
"Bug Tracker" = "https://github.com/harmslab/linkage/issues"

[project.optional-dependencies]
test = [
  "coverage",
  "flake8",
  "pytest",
  "genbadge"
 ]
